PROJECT(ROSS_Damaris)


INCLUDE_DIRECTORIES(SYSTEM ${DAMARIS_DIR}/include $ENV{HOME}/visit/visit2.12.1/src/sim/V2/lib)

SET(VTK_DIR $ENV{HOME}/vtk-bin)
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})
SET(damaris_srcs plugins.cpp)
#INCLUDE_DIRECTORIES(${VTK_INCLUDE_DIR})

ADD_LIBRARY(ROSS_Damaris SHARED ${damaris_srcs})

TARGET_LINK_LIBRARIES(ROSS_Damaris ${VTK_LIBRARIES} ROSS)


