PROJECT(RIO)

SET(rio_srcs io.h io-mpi.c io-serialize.c)

## Print RIO Git Hash
LIST(APPEND CMAKE_MODULE_PATH "${ROSS_SOURCE_DIR}/cmake/")
INCLUDE(GetGitRevisionDescription)
GET_GIT_HEAD_REVISION(GIT_REFSPEC_IO GIT_SHA1_IO)

## Build Configuration File
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/io-config.h.in ${CMAKE_CURRENT_BINARY_DIR}/io-config.h @ONLY)
SET(rio_srcs ${rio_srcs} io-config.h)
SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/io-config.h.in PROPERTIES GENERATED FALSE)
SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/io-config.h PROPERTIES GENERATED TRUE)

ADD_LIBRARY(RIO ${rio_srcs})

# find ross.h
INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR} ${ROSS_BINARY_DIR})
TARGET_LINK_LIBRARIES(RIO ROSS)
