INCLUDE_DIRECTORIES(${ROSS_BINARY_DIR})
IF(USE_DAMARIS)
    INCLUDE_DIRECTORIES(${DAMARIS_INCLUDE}) 
ENDIF(USE_DAMARIS)
IF(BGPM)
	INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR} ${BGPM_LIB})
ELSE(NOT(BGPM))
	INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR})
ENDIF(BGPM)

SET(lapdes_srcs
    la-pdes.c
    la-pdes.h)


ADD_EXECUTABLE(lapdes ${lapdes_srcs})
ADD_EXECUTABLE(lapdes_test ${lapdes_srcs})

IF(BGPM)
	TARGET_LINK_LIBRARIES(lapdes ROSS imp_bgpm m)
	TARGET_LINK_LIBRARIES(lapdes_test ROSS imp_bgpm m)
ELSE(NOT(BGPM))
    IF(USE_DAMARIS)
        TARGET_LINK_LIBRARIES(lapdes ROSS ROSS_Damaris m)
        TARGET_LINK_LIBRARIES(lapdes_test ROSS ROSS_Damaris m)
    ELSE(NOT(USE_DAMARIS))
        TARGET_LINK_LIBRARIES(lapdes ROSS m)
        TARGET_LINK_LIBRARIES(lapdes_test ROSS m)
    ENDIF(USE_DAMARIS)
ENDIF(BGPM)

ROSS_TEST_SCHEDULERS(lapdes)
ROSS_TEST_INSTRUMENTATION(lapdes)

SET_TARGET_PROPERTIES(lapdes_test PROPERTIES COMPILE_DEFINITIONS TEST_COMM_ROSS)
ROSS_TEST_SCHEDULERS(lapdes_test)
ROSS_TEST_INSTRUMENTATION(lapdes_test)
